--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,4 @@
-title: John Doe # your name (or website title) here
-logo: "/images/logo.png?raw=true" # your photo (or logo) here
+title: Breanne Felton # your name (or website title) here # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   First description 
   <br><br>
